# ghat

./: Cargo.toml  README.md  dist-workspace.toml  gh-ctx.md  phases.md  plan.md
.claude/commands/: add-test.md
.github/: release-setup.yml
.github/ghat/: .gitattributes  tsconfig.json
.github/workflows/: generated_ci.yaml  ghat_check.yaml  release.yml
src/: cli.rs  codegen.rs  github.rs  lockfile.rs  main.rs  oxc.rs  runtime.rs  workflow.rs
src/cli/: add.rs  check.rs  common.rs  generate.rs  init.rs  new.rs  rm.rs  style.rs  update.rs
src/oxc/: tests.rs
src/runtime/: api-impl.ts  api-test.ts  api.d.ts  workflow.d.ts
src/snapshots/: ghat__codegen__tests__generate_action_dts.snap  ghat__codegen__tests__generate_action_dts_no_required.snap  ghat__codegen__tests__generate_mappings_js.snap  ghat__codegen__tests__generate_mappings_js_no_renames.snap  ghat__github__tests__parse_manifest_checkout.snap  ghat__github__tests__parse_manifest_rust_cache.snap  ghat__lockfile__tests__parse_and_serialize.snap  ghat__lockfile__tests__roundtrip.snap
src/workflow/: cron.rs  tests.rs
tests/: cmd_add.rs  cmd_check.rs  cmd_generate.rs  cmd_generate_concurrency.rs  cmd_generate_context.rs  cmd_generate_edge_cases.rs  cmd_generate_imports.rs  cmd_generate_jobs.rs  cmd_generate_matrix.rs  cmd_generate_permissions.rs  cmd_generate_steps.rs  cmd_generate_triggers.rs  cmd_generate_workflow_call.rs  cmd_init.rs  cmd_pipeline.rs  cmd_rm.rs  cmd_update.rs  e2e.rs
tests/snapshots/: cmd_add__add_invalid_ref.snap  cmd_add__add_no_actions.snap  cmd_add__add_no_lockfile.snap  cmd_add__cmd_add::add_branch_ref-diff.snap  cmd_add__cmd_add::add_branch_ref-output.snap  cmd_add__cmd_add::add_duplicate_skipped-output.snap  cmd_add__cmd_add::add_exact_version-diff.snap  cmd_add__cmd_add::add_exact_version-output.snap  cmd_add__cmd_add::add_multiple_actions-checkout_dts.snap  cmd_add__cmd_add::add_multiple_actions-diff.snap  cmd_add__cmd_add::add_multiple_actions-output.snap  cmd_add__cmd_add::add_multiple_actions-rust_cache_dts.snap  cmd_add__cmd_add::add_single_action-diff.snap  cmd_add__cmd_add::add_single_action-mappings.snap  cmd_add__cmd_add::add_single_action-output.snap  cmd_add__cmd_add__add_duplicate_skipped-output.snap  cmd_add__cmd_add__add_multiple_actions-checkout_dts.snap  cmd_add__cmd_add__add_multiple_actions-mappings.snap  cmd_add__cmd_add__add_multiple_actions-output.snap  cmd_add__cmd_add__add_multiple_actions-rust_cache_dts.snap  cmd_add__cmd_add__add_single_action-dts.snap  cmd_add__cmd_add__add_single_action-mappings.snap  cmd_add__cmd_add__add_single_action-output.snap  cmd_check__no_tsconfig.snap  cmd_check__ok_empty.snap  cmd_check__syntax_error.snap  cmd_check__type_error.snap  cmd_generate__cmd_generate::dedents_multiline_run-generated.snap  cmd_generate__cmd_generate::simple_workflow-output.snap  (+136 more)
(+56 files in other folders)
